--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <body>
         <h1>Hello</h1>
         <div id="content"></div>
+        <div id="profile"></div>
         <script type="text/javascript" src="/js/react.js"></script>
         <script type="text/javascript" src="/js/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/babel" src="/js/streamSos.js"></script>
+        <script type="text/babel" src="/js/sosProfile.js"></script>
+        <script type="text/babel" src="/js/sosStream.js"></script>
     </body>
 </html>
