--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,27 @@
 <html>
     <head>
         <title>eva</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+        
     </head>
     <body>
-        <h1>Hello</h1>
-        <div id="content"></div>
-        <div id="profile"></div>
+        <div class="container-fluid">
+            <div class="col-sm-12 col-md-12 main">
+                <h1 class="page-header">Dashboard</h1>
+            </div>
+            <div id="content"></div>
+        </div>
+        <link rel="stylesheet" href="/css/style.css" />
         <script type="text/javascript" src="/js/react.js"></script>
         <script type="text/javascript" src="/js/react-dom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.28.3/react-bootstrap.min.js"></script>
+        <script>var Alert = ReactBootstrap.Alert;</script>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script type="text/babel" src="/js/sosProfile.js"></script>
         <script type="text/babel" src="/js/sosStream.js"></script>
+        
     </body>
 </html>
